tests/ui/has-generics.stderr
error: schema! does not support generic types.
 --> $DIR/has-generics.rs:3:22
  |
3 |     pub struct Struct<T>(T);
  |                      ^^^
