tests/ui/has-generics.rs
polygraph::schema!{
    type MySchema;
    pub struct Struct<T>(T);
}

fn main() {
}
